--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "builddev": "webpack --mode=development"
   },
   "repository": {
     "type": "git",
